<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="leonardomarcus.com.br.pathwheel.fragment.AboutFragment">


    <ScrollView
        android:id="@+id/scrollview_calibragem_frgmt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_calibragem_temporeal_frgmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="22dp" />
            <TextView
                android:id="@+id/textView_about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="v0.0.0.1"
                android:textAlignment="center"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:srcCompat="@mipmap/ic_pathwheel" />

            <TextView
                android:id="@+id/textView_calibragem_info_frgmnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/textview_about_info" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:textAlignment="center"
                android:text="@string/textview_about_authors" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
